--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <title>image</title>
 </head>
 <body>
-    <img src="mus.jpg" 
+    <img src="Downloads/mus.jpg" 
     height="150px" width="150px">
     <h1>SUGENDHIRAN N</h1>
     <a href="email id">sugendhiran2003@gmail.com</a>
